--- a/weather-journal-app/website/style.css
+++ b/weather-journal-app/website/style.css
@@ -29,36 +29,18 @@ body{
     display: grid;
     grid-template-rows: 60%;
     grid-template-columns: 50% 50%;
-    font-size: 1.5vw;
+    grid-column: 2;
+    font-size: 1.5em;
     visibility: hidden;
 }
 
-#temp,
-#city{
-  font-size: 4vw;
+.zip,
+.feel{
+    grid-column: 1;
 }
-/* #entryHolder{
-    
-}
-
-#date{
-
-}
-
-#temp{
-
-} */
-
 #content{
     grid-column: 1 / -1;
 }
-
-/* .headline {
-
-}
-.title{
-
-} */
 
 /*  Basic Styling To Override Default For Basic HTML Elements */
 label{
